k8s/production/postgres-service.yaml
# postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uniauth-db
  namespace: uniauth
spec:
  selector:
    app: uniauth-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
