k8s/production/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uniauth-ingress
  namespace: uniauth
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uniauth-web
                port:
                  number: 80
